--- a/Arquivo.html
+++ b/Arquivo.html
@@ -1,11 +1,9 @@
 <html>
 <head>
-    //conjunto de informações/scripts/etc que serão ustilizados pelo browser
-    //HTML 4
+
     <meta http-equiv= "Content - Type" content= "texte/html; charset= utf - 8">
-    //HTML 5
     <meta charset= "utf -8">
-    <title> Olá mundo </title>
+    <title> Teste </title>
 
     <style>
         body{
