--- a/Arquivo.html
+++ b/Arquivo.html
@@ -7,12 +7,12 @@
 
     <style>
         body{
-            background-color: black;
+            background-color: whitesmoke;
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
 
         p {
-            background-color: cadetblue;
+            background-color: black;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             margin-top: 50px;
             margin-left: 70px;
@@ -20,7 +20,7 @@
         }
 
         div{
-            background-color: chartreuse;
+            background-color: blueviolet;
             padding: 50px;
             padding-left: 100px;
         }
@@ -46,8 +46,8 @@
 
 <body>
     <div>
-        <h1>Introdução</h1>
-        <p> Era uma vez</p>
+        <h1>Teste Geral</h1>
+        <p> Instagram</p>
         <h1>Capitulo 2</h1>
         <p id= "paragrafo1" class = "paragrafosLaranjas"> Outro parágrafo</p>
         <p id= "paragrafo2" class = "paragrafosLaranjas"> Outro parágrafo</p>
