--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    //conjunto de informações/scripts/etc que serão ustilizados pelo browser
+    //conjunto de informações/scripts/etc que serão ustilizados pelo browser //
     //HTML 4
     <meta http-equiv= "Content - Type" content= "texte/html; charset= utf - 8">
     //HTML 5
