--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
         for (i = 0; i < elementoslaranjas.lenght; i++){
             elementosLaranjas[i].style = "background: black";
         }
+
+        variavel = {
+            "atributo" : 'valor',
+            "atributo2" : 'valor2'
+        };
+        variavel['novoAtributo'] = 'novoValor';
+        
+        console.log (variavel);
+
     }
     </script>
 </head>
