--- a/shopping/index.html
+++ b/shopping/index.html
@@ -1,9 +1,37 @@
 <!doctype html>
 <html lang="en">
-    <header>
+    <head>
+        <meta http-equiv= "Content - Type" content= "texte/html; charset= utf - 8">
+        <meta charset= "utf -8">
+        <title> Tabela </title>
+            
 
-    </header>
+        <style>
+            table {
+                width: 100px;
+                height: 100px;
+            }
+            tr{
+                background-color: darkgrey;
+            }
+        </style>
+
+
+
+    </head>
     <body>
+        <table border="1">
+           <tr>
+                <td>Nome</td> 
+                <td>CPF</td>
+                <td>Endereço</td>
+           </tr>
+            <tr>
+                <td>Ted</td>
+                <td>22</td>
+                <td>Estudante</td>
+            </tr>
 
+        </table>
     </body>
 </html>
